--- a/app.json
+++ b/app.json
@@ -3,7 +3,6 @@
     "name": "voicebook-notes",
     "slug": "voicebook-notes",
     "version": "1.0.0",
-
     "scheme": "voicebook-notes",
     "web": {
       "bundler": "metro",
@@ -13,15 +12,11 @@
     "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -29,13 +24,19 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anilyavas.voicebooknotes",
+      "infoPlist": {
+        "NSMicrophoneUsageDescription": "VoiceBook Notes needs to access to your microphone to record audio notes."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": ["RECORD_AUDIO"],
+      "package": "com.anilyavas.voicebooknotes"
     }
   }
 }
